# the_monster

./: .gitignore  Cargo.toml  README.md
src/: colors.rs  error.rs  lib.rs  logging.rs  main.rs  monster.rs  parts.rs
src/body/: arms.rs  body.rs  head.rs  legs.rs
src/monster/: arms.rs  body.rs  head.rs  legs.rs
src/parts/: eye.rs  polygon.rs  weapon.rs
